# zh_TW-charater-flipper

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md  test_file.txt
cmd/: flipper.cpp
dockerfile/: env.dockerfile
src/: CMakeLists.txt  helper.cpp  helper.h  task.cpp  task.h  task_manager.cpp  task_manager.h  wrap_map_region.cpp  wrap_map_region.h
